# transcribe

./: .env.example  README.md  address_error_correction_with_vendor_name.md  pyproject.toml
address/: README.md  pyproject.toml
address/scripts/: build_index.py  demo_corrections.py  download_overture.py
address/src/address_correction/: __init__.py  db.py  download.py  indexer.py  matcher.py  sample_data.py  vectorizer.py
address/tests/: conftest.py  test_corrections.py  test_db.py  test_matcher.py  test_vectorizer.py
app/: transcribe.py
